Correcao yml e build plugin